[package]
name = "arkworks_non_native_g1_multiplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.76"
group = "0.13.0"
sha2 = "0.10"
hex = "0.4"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-bls12-381 = "0.4"
ark-relations = "0.4.0"
ark-groth16 = { version = "0.4.0", features = ["std", "parallel", "r1cs"] }
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
